--- a/ArtMediaSite/src/app/user.component.html
+++ b/ArtMediaSite/src/app/user.component.html
@@ -22,6 +22,7 @@
       </div>
     </div>
     <div class="row">
+      <p>View posts by {{userProfile.username}}</p>
       <div class="col" *ngFor = "let post of posts">
         <div class="post card bg-transparent" *ngIf = "post.user === userProfile.id" [routerLink] = "['/posts/', post.id]">
           <div class="card-img-top">
